initial project setup

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -59,9 +59,12 @@ footer {
 @import 'modal';
 @import 'review-section';
 
+
 #carouselButton {
     position: absolute;
     right: 0;
     bottom: 0;
     z-index: 100;
 }
+
+@import 'weather';
